[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "kubekj",email = "kuba.jedraszka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
